--- a/gaia/gaia.vcxproj
+++ b/gaia/gaia.vcxproj
@@ -169,7 +169,9 @@
     <ClInclude Include="draw_path.h" />
     <ClInclude Include="gaia.h" />
     <ClInclude Include="draw_city.h" />
+    <ClInclude Include="input.h" />
     <ClInclude Include="render_buffer.h" />
+    <ClInclude Include="state_manager.h" />
     <ClInclude Include="window.h" />
     <ClInclude Include="magicNumbers.h" />
     <ClInclude Include="path.h" />
