--- a/gaia/gaia.vcxproj
+++ b/gaia/gaia.vcxproj
@@ -155,26 +155,27 @@
     <ClCompile Include="city.cpp" />
     <ClCompile Include="draw_city.cpp" />
     <ClCompile Include="draw_path.cpp" />
-    <ClCompile Include="gaia.cpp" />
+    <ClCompile Include="simulator.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="path.cpp" />
     <ClCompile Include="paths.cpp" />
     <ClCompile Include="render_buffer.cpp" />
     <ClCompile Include="seedRand.cpp" />
+    <ClCompile Include="state_manager.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cities.h" />
     <ClInclude Include="city.h" />
     <ClInclude Include="draw_path.h" />
-    <ClInclude Include="gaia.h" />
+    <ClInclude Include="simulator.h" />
     <ClInclude Include="draw_city.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="render_buffer.h" />
     <ClInclude Include="state_manager.h" />
     <ClInclude Include="window.h" />
-    <ClInclude Include="magicNumbers.h" />
+    <ClInclude Include="settings.h" />
     <ClInclude Include="path.h" />
     <ClInclude Include="paths.h" />
     <ClInclude Include="seedRand.h" />
